--- a/notebooks/01_training.ipynb
+++ b/notebooks/01_training.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -57,32 +57,111 @@
      "output_type": "stream",
      "text": [
       "c:\\Users\\gaspa\\Documents\\ml-signal-generator\\src\\features.py:27: FutureWarning: YF.download() has changed argument auto_adjust default to True\n",
-      "  data = yf.download(ticker, start=start_date, end=end_date, progress=False)\n",
-      "\n",
-      "1 Failed download:\n",
-      "['SPY']: DNSError('Failed to perform, curl: (6) Could not resolve host: query1.finance.yahoo.com. See https://curl.se/libcurl/c/libcurl-errors.html first for more details.')\n"
+      "  data = yf.download(ticker, start=start_date, end=end_date, progress=False)\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Downloaded 0 days of data\n"
+      "Downloaded 1006 days of data\n",
+      "Date range: 2020-01-02 00:00:00 to 2023-12-29 00:00:00\n"
      ]
     },
     {
-     "ename": "IndexError",
-     "evalue": "index 0 is out of bounds for axis 0 with size 0",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mIndexError\u001b[39m                                Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[2]\u001b[39m\u001b[32m, line 10\u001b[39m\n\u001b[32m      8\u001b[39m data = download_data(TICKER, START_DATE, END_DATE)\n\u001b[32m      9\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mDownloaded \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mlen\u001b[39m(data)\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m days of data\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m---> \u001b[39m\u001b[32m10\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mDate range: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[43mdata\u001b[49m\u001b[43m.\u001b[49m\u001b[43mindex\u001b[49m\u001b[43m[\u001b[49m\u001b[32;43m0\u001b[39;49m\u001b[43m]\u001b[49m\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m to \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mdata.index[-\u001b[32m1\u001b[39m]\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m)\n\u001b[32m     11\u001b[39m data.head()\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\gaspa\\Documents\\ml-signal-generator\\venv\\Lib\\site-packages\\pandas\\core\\indexes\\base.py:5401\u001b[39m, in \u001b[36mIndex.__getitem__\u001b[39m\u001b[34m(self, key)\u001b[39m\n\u001b[32m   5398\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m is_integer(key) \u001b[38;5;129;01mor\u001b[39;00m is_float(key):\n\u001b[32m   5399\u001b[39m     \u001b[38;5;66;03m# GH#44051 exclude bool, which would return a 2d ndarray\u001b[39;00m\n\u001b[32m   5400\u001b[39m     key = com.cast_scalar_indexer(key)\n\u001b[32m-> \u001b[39m\u001b[32m5401\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mgetitem\u001b[49m\u001b[43m(\u001b[49m\u001b[43mkey\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m   5403\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(key, \u001b[38;5;28mslice\u001b[39m):\n\u001b[32m   5404\u001b[39m     \u001b[38;5;66;03m# This case is separated from the conditional above to avoid\u001b[39;00m\n\u001b[32m   5405\u001b[39m     \u001b[38;5;66;03m# pessimization com.is_bool_indexer and ndim checks.\u001b[39;00m\n\u001b[32m   5406\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m._getitem_slice(key)\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\gaspa\\Documents\\ml-signal-generator\\venv\\Lib\\site-packages\\pandas\\core\\arrays\\datetimelike.py:398\u001b[39m, in \u001b[36mDatetimeLikeArrayMixin.__getitem__\u001b[39m\u001b[34m(self, key)\u001b[39m\n\u001b[32m    391\u001b[39m \u001b[38;5;250m\u001b[39m\u001b[33;03m\"\"\"\u001b[39;00m\n\u001b[32m    392\u001b[39m \u001b[33;03mThis getitem defers to the underlying array, which by-definition can\u001b[39;00m\n\u001b[32m    393\u001b[39m \u001b[33;03monly handle list-likes, slices, and integer scalars\u001b[39;00m\n\u001b[32m    394\u001b[39m \u001b[33;03m\"\"\"\u001b[39;00m\n\u001b[32m    395\u001b[39m \u001b[38;5;66;03m# Use cast as we know we will get back a DatetimeLikeArray or DTScalar,\u001b[39;00m\n\u001b[32m    396\u001b[39m \u001b[38;5;66;03m# but skip evaluating the Union at runtime for performance\u001b[39;00m\n\u001b[32m    397\u001b[39m \u001b[38;5;66;03m# (see https://github.com/pandas-dev/pandas/pull/44624)\u001b[39;00m\n\u001b[32m--> \u001b[39m\u001b[32m398\u001b[39m result = cast(\u001b[33m\"\u001b[39m\u001b[33mUnion[Self, DTScalarOrNaT]\u001b[39m\u001b[33m\"\u001b[39m, \u001b[38;5;28;43msuper\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m.\u001b[49m\u001b[34;43m__getitem__\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mkey\u001b[49m\u001b[43m)\u001b[49m)\n\u001b[32m    399\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m lib.is_scalar(result):\n\u001b[32m    400\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m result\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\gaspa\\Documents\\ml-signal-generator\\venv\\Lib\\site-packages\\pandas\\core\\arrays\\_mixins.py:284\u001b[39m, in \u001b[36mNDArrayBackedExtensionArray.__getitem__\u001b[39m\u001b[34m(self, key)\u001b[39m\n\u001b[32m    278\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34m__getitem__\u001b[39m(\n\u001b[32m    279\u001b[39m     \u001b[38;5;28mself\u001b[39m,\n\u001b[32m    280\u001b[39m     key: PositionalIndexer2D,\n\u001b[32m    281\u001b[39m ) -> Self | Any:\n\u001b[32m    282\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m lib.is_integer(key):\n\u001b[32m    283\u001b[39m         \u001b[38;5;66;03m# fast-path\u001b[39;00m\n\u001b[32m--> \u001b[39m\u001b[32m284\u001b[39m         result = \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_ndarray\u001b[49m\u001b[43m[\u001b[49m\u001b[43mkey\u001b[49m\u001b[43m]\u001b[49m\n\u001b[32m    285\u001b[39m         \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m.ndim == \u001b[32m1\u001b[39m:\n\u001b[32m    286\u001b[39m             \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m._box_func(result)\n",
-      "\u001b[31mIndexError\u001b[39m: index 0 is out of bounds for axis 0 with size 0"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>Price</th>\n",
+       "      <th>Close</th>\n",
+       "      <th>High</th>\n",
+       "      <th>Low</th>\n",
+       "      <th>Open</th>\n",
+       "      <th>Volume</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Date</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2020-01-02</th>\n",
+       "      <td>298.578613</td>\n",
+       "      <td>298.597013</td>\n",
+       "      <td>296.427990</td>\n",
+       "      <td>297.356261</td>\n",
+       "      <td>59151200</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-01-03</th>\n",
+       "      <td>296.317810</td>\n",
+       "      <td>297.448278</td>\n",
+       "      <td>295.113829</td>\n",
+       "      <td>295.168971</td>\n",
+       "      <td>77709700</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-01-06</th>\n",
+       "      <td>297.448242</td>\n",
+       "      <td>297.530955</td>\n",
+       "      <td>294.433661</td>\n",
+       "      <td>294.553145</td>\n",
+       "      <td>55653900</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-01-07</th>\n",
+       "      <td>296.611847</td>\n",
+       "      <td>297.356292</td>\n",
+       "      <td>296.161483</td>\n",
+       "      <td>296.878357</td>\n",
+       "      <td>40496400</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-01-08</th>\n",
+       "      <td>298.192657</td>\n",
+       "      <td>299.415010</td>\n",
+       "      <td>296.556712</td>\n",
+       "      <td>296.804851</td>\n",
+       "      <td>68296000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Price            Close        High         Low        Open    Volume\n",
+       "Date                                                                \n",
+       "2020-01-02  298.578613  298.597013  296.427990  297.356261  59151200\n",
+       "2020-01-03  296.317810  297.448278  295.113829  295.168971  77709700\n",
+       "2020-01-06  297.448242  297.530955  294.433661  294.553145  55653900\n",
+       "2020-01-07  296.611847  297.356292  296.161483  296.878357  40496400\n",
+       "2020-01-08  298.192657  299.415010  296.556712  296.804851  68296000"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -108,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -154,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -195,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -205,7 +284,7 @@
       "Training Random Forest...\n",
       "\n",
       "Validation Metrics:\n",
-      "  AUC: 0.5416\n",
+      "  AUC: 0.5417\n",
       "  Train Accuracy: 0.9725\n",
       "  Validation Accuracy: 0.5473\n"
      ]
@@ -250,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -259,13 +338,13 @@
      "text": [
       "Feature Importance:\n",
       "          feature  importance\n",
-      "0       return_1d    0.184743\n",
-      "2  volatility_20d    0.171167\n",
-      "1       return_5d    0.168430\n",
-      "4          ma_20d    0.159738\n",
-      "5          ma_gap    0.158479\n",
-      "3           ma_5d    0.157443\n",
-      "Feature importance plot saved to outputs/feature_importance.png\n"
+      "0       return_1d    0.184821\n",
+      "2  volatility_20d    0.170873\n",
+      "1       return_5d    0.168280\n",
+      "4          ma_20d    0.160028\n",
+      "5          ma_gap    0.158587\n",
+      "3           ma_5d    0.157412\n",
+      "Feature importance plot saved to ../outputs/feature_importance.png\n"
      ]
     }
    ],
@@ -288,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -297,7 +376,7 @@
      "text": [
       "\n",
       "Test Set Metrics:\n",
-      "  AUC: 0.4685\n",
+      "  AUC: 0.4665\n",
       "  Accuracy: 0.5135\n",
       "\n",
       "Classification Report:\n",
@@ -335,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -343,8 +422,8 @@
      "output_type": "stream",
      "text": [
       "Signal Statistics:\n",
-      "  Total signals: 98 out of 147 days\n",
-      "  Signal rate: 66.67%\n",
+      "  Total signals: 99 out of 147 days\n",
+      "  Signal rate: 67.35%\n",
       "\n",
       "Test returns range: 2023-05-31 00:00:00 to 2023-12-28 00:00:00\n"
      ]
@@ -381,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -390,13 +469,13 @@
      "text": [
       "\n",
       "Backtest Performance Metrics:\n",
-      "  Total Return: 2.89%\n",
-      "  Annualized Return: 5.00%\n",
+      "  Total Return: 2.87%\n",
+      "  Annualized Return: 4.96%\n",
       "  Volatility: 9.67%\n",
-      "  Sharpe Ratio: 0.52\n",
+      "  Sharpe Ratio: 0.51\n",
       "  Max Drawdown: -11.16%\n",
-      "  Win Rate: 55.67%\n",
-      "  Total Trades: 98\n"
+      "  Win Rate: 55.10%\n",
+      "  Total Trades: 99\n"
      ]
     }
    ],
@@ -440,14 +519,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Equity curve saved to outputs/equity_curve.png\n"
+      "Equity curve saved to ../outputs/equity_curve.png\n"
      ]
     }
    ],
