--- a/notebooks/01_training.ipynb
+++ b/notebooks/01_training.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -24,8 +24,8 @@
      "output_type": "stream",
      "text": [
       "✓ Loaded environment variables from .env\n",
-      "Project root: c:\\Users\\Admin\\Documents\\Projects\\ml-signal-generator\n",
-      "Output directory: c:\\Users\\Admin\\Documents\\Projects\\ml-signal-generator\\outputs\n"
+      "Project root: c:\\Users\\gaspa\\Documents\\ml-signal-generator\n",
+      "Output directory: c:\\Users\\gaspa\\Documents\\ml-signal-generator\\outputs\n"
      ]
     }
    ],
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -89,10 +89,9 @@
      "output_type": "stream",
      "text": [
       "API Source: alpha_vantage\n",
-      "API Key: ************4O8F\n",
+      "API Key: ************RRSI\n",
       "Loading saved data from SPY_2020-01-01_2024-01-01.csv...\n",
-      "✓ Loaded 1006 days of saved data\n",
-      "Date range: 2020-01-02 00:00:00 to 2023-12-29 00:00:00\n",
+      "✓ Loaded 1006 days of saved data from CSV\n",
       "\n",
       "✓ Successfully loaded 1006 days of data\n",
       "Date range: 2020-01-02 00:00:00 to 2023-12-29 00:00:00\n",
@@ -288,8 +287,8 @@
     "            # Save data for future use\n",
     "            data_dir = project_root / 'data'\n",
     "            data_dir.mkdir(exist_ok=True)\n",
-    "            data.to_csv(data_file)\n",
-    "            print(f\"✓ Data saved to {data_file.name} for future use\")\n",
+    "            data.to_csv(data_file_csv)\n",
+    "            print(f\"✓ Data saved to {data_file_csv.name} for future use\")\n",
     "            break\n",
     "            \n",
     "        except Exception as e:\n",
@@ -387,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -433,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -474,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -482,11 +481,15 @@
      "output_type": "stream",
      "text": [
       "Training Random Forest...\n",
+      "⚠️  Using reduced complexity to prevent overfitting:\n",
+      "   - max_depth=5 (was 10) to reduce memorization\n",
+      "   - min_samples_split=20 to require more samples per split\n",
+      "   - min_samples_leaf=10 to require more samples per leaf\n",
       "\n",
       "Validation Metrics:\n",
-      "  AUC: 0.5410\n",
-      "  Train Accuracy: 0.9681\n",
-      "  Validation Accuracy: 0.5000\n"
+      "  AUC: 0.5195\n",
+      "  Train Accuracy: 0.6957\n",
+      "  Validation Accuracy: 0.5270\n"
      ]
     }
    ],
@@ -529,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -538,13 +541,13 @@
      "text": [
       "Feature Importance:\n",
       "          feature  importance\n",
-      "0       return_1d    0.189799\n",
-      "2  volatility_20d    0.170683\n",
-      "1       return_5d    0.169874\n",
-      "3           ma_5d    0.164021\n",
-      "5          ma_gap    0.159691\n",
-      "4          ma_20d    0.145932\n",
-      "Feature importance plot saved to c:\\Users\\Admin\\Documents\\Projects\\ml-signal-generator\\outputs\\feature_importance.png\n"
+      "0       return_1d    0.204639\n",
+      "2  volatility_20d    0.179948\n",
+      "1       return_5d    0.175335\n",
+      "3           ma_5d    0.157934\n",
+      "5          ma_gap    0.144487\n",
+      "4          ma_20d    0.137657\n",
+      "Feature importance plot saved to c:\\Users\\gaspa\\Documents\\ml-signal-generator\\outputs\\feature_importance.png\n"
      ]
     }
    ],
@@ -574,7 +577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -583,18 +586,18 @@
      "text": [
       "\n",
       "Test Set Metrics:\n",
-      "  AUC: 0.5455\n",
-      "  Accuracy: 0.5608\n",
+      "  AUC: 0.5134\n",
+      "  Accuracy: 0.5473\n",
       "\n",
       "Classification Report:\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.46      0.21      0.29        63\n",
-      "           1       0.58      0.82      0.68        85\n",
+      "           0       0.39      0.11      0.17        63\n",
+      "           1       0.57      0.87      0.69        85\n",
       "\n",
-      "    accuracy                           0.56       148\n",
-      "   macro avg       0.52      0.51      0.48       148\n",
-      "weighted avg       0.53      0.56      0.51       148\n",
+      "    accuracy                           0.55       148\n",
+      "   macro avg       0.48      0.49      0.43       148\n",
+      "weighted avg       0.49      0.55      0.47       148\n",
       "\n"
      ]
     }
@@ -621,7 +624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -629,8 +632,8 @@
      "output_type": "stream",
      "text": [
       "Signal Statistics:\n",
-      "  Total signals: 104 out of 147 days\n",
-      "  Signal rate: 70.75%\n",
+      "  Total signals: 111 out of 147 days\n",
+      "  Signal rate: 75.51%\n",
       "\n",
       "Test returns range: 2023-05-31 00:00:00 to 2023-12-28 00:00:00\n"
      ]
@@ -667,7 +670,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -676,13 +679,13 @@
      "text": [
       "\n",
       "Backtest Performance Metrics:\n",
-      "  Total Return: 13.82%\n",
-      "  Annualized Return: 24.85%\n",
-      "  Volatility: 9.58%\n",
-      "  Sharpe Ratio: 2.59\n",
-      "  Max Drawdown: -7.77%\n",
-      "  Win Rate: 61.17%\n",
-      "  Total Trades: 104\n"
+      "  Total Return: 5.83%\n",
+      "  Annualized Return: 10.20%\n",
+      "  Volatility: 9.60%\n",
+      "  Sharpe Ratio: 1.06\n",
+      "  Max Drawdown: -8.96%\n",
+      "  Win Rate: 56.36%\n",
+      "  Total Trades: 111\n"
      ]
     }
    ],
@@ -726,14 +729,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Equity curve saved to c:\\Users\\Admin\\Documents\\Projects\\ml-signal-generator\\outputs\\equity_curve.png\n"
+      "Equity curve saved to c:\\Users\\gaspa\\Documents\\ml-signal-generator\\outputs\\equity_curve.png\n"
      ]
     }
    ],
@@ -752,7 +755,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -766,7 +769,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.13.9"
   }
  },
  "nbformat": 4,
